fixing overflow

--- a/src/assets/styles/App.css
+++ b/src/assets/styles/App.css
@@ -4,6 +4,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: 'Manrope', serif;
+  text-overflow: ellipsis;
 }
 
 /* Remove border for images */
